--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@ valentine.html
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Be My Valentine 💘</title>
+<title>Mezaab, Wil You Be My Valentine? 💘</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Handwritten-style font -->
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 
 <style>
-  * {
-    box-sizing: border-box;
-  }
+  * { box-sizing: border-box; }
 
   body {
     margin: 0;
@@ -25,16 +22,31 @@ valentine.html
     align-items: center;
   }
 
+  /* subtle background hearts */
+  .bg-heart {
+    position: absolute;
+    font-size: 80px;
+    color: rgba(255, 182, 193, 0.18);
+    animation: drift 20s linear infinite;
+    pointer-events: none;
+  }
+
+  @keyframes drift {
+    from { transform: translateY(110vh); }
+    to { transform: translateY(-120vh); }
+  }
+
+  /* burst hearts */
   .heart {
     position: absolute;
-    color: rgba(255, 77, 109, 0.6);
-    animation: floatUp 8s linear infinite;
+    color: rgba(255, 77, 109, 0.75);
+    animation: floatUp 1s ease forwards;
     pointer-events: none;
   }
 
   @keyframes floatUp {
-    from { transform: translateY(110vh); opacity: 1; }
-    to { transform: translateY(-10vh); opacity: 0; }
+    from { transform: translateY(0) scale(1); opacity: 1; }
+    to { transform: translateY(-120px) scale(1.4); opacity: 0; }
   }
 
   .container {
@@ -44,6 +56,8 @@ valentine.html
     width: min(92%, 440px);
     text-align: center;
     box-shadow: 0 30px 60px rgba(0,0,0,0.12);
+    position: relative;
+    z-index: 2;
   }
 
   .cat {
@@ -91,19 +105,32 @@ valentine.html
   #message {
     display: none;
     font-family: "Patrick Hand", cursive;
-    font-size: 1.4rem;
+    font-size: 1.45rem;
     color: #444;
     margin-top: 20px;
-    line-height: 1.5;
+    line-height: 1.6;
+    white-space: pre-line;
   }
 </style>
 </head>
 
 <body>
 
-<div class="container" id="container">
+<script>
+  // background hearts
+  for (let i = 0; i < 10; i++) {
+    const bg = document.createElement("div");
+    bg.className = "bg-heart";
+    bg.textContent = "❤";
+    bg.style.left = Math.random() * 100 + "vw";
+    bg.style.animationDuration = 15 + Math.random() * 20 + "s";
+    bg.style.fontSize = 60 + Math.random() * 80 + "px";
+    document.body.appendChild(bg);
+  }
+</script>
 
-  <!-- Image that will change -->
+<div class="container">
+
   <img id="catImage" class="cat" src="cat-before.jpg" alt="Cute cat">
 
   <h1 id="question">Will you be my Valentine? 💖</h1>
@@ -113,9 +140,7 @@ valentine.html
     <button id="no">No 😭</button>
   </div>
 
-  <div id="message">
-Oh how you wish you could press no 😔, should have known its not that easy with me😉. i love you laods mezaab i cannot wait for this special day. and between me and you, i know you pressed that yes instantly 😜. 
-  </div>
+  <div id="message"></div>
 
 </div>
 
@@ -123,7 +148,6 @@ Oh how you wish you could press no 😔, should have known its not that easy wit
   // Name from URL
   const params = new URLSearchParams(window.location.search);
   const name = params.get("name");
-
   if (name) {
     document.getElementById("question").textContent =
       `${name}, will you be my Valentine? 💖`;
@@ -133,44 +157,86 @@ Oh how you wish you could press no 😔, should have known its not that easy wit
   const yesBtn = document.getElementById("yes");
   const catImage = document.getElementById("catImage");
   const buttons = document.getElementById("buttons");
-  const message = document.getElementById("message");
+  const messageEl = document.getElementById("message");
 
   let scale = 1;
 
   noBtn.addEventListener("mouseover", () => {
-    const maxX = 250;
-    const maxY = 90;
-
-    noBtn.style.left = Math.random() * maxX + "px";
-    noBtn.style.top = Math.random() * maxY + "px";
-
+    noBtn.style.left = Math.random() * 250 + "px";
+    noBtn.style.top = Math.random() * 90 + "px";
     scale += 0.12;
     yesBtn.style.transform = `scale(${scale})`;
   });
 
-  yesBtn.addEventListener("click", () => {
-    catImage.style.opacity = 0;
+  function heartBurst() {
+    for (let i = 0; i < 24; i++) {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.textContent = "❤";
+      heart.style.left = 50 + (Math.random() * 140 - 70) + "px";
+      heart.style.top = "55%";
+      heart.style.fontSize = 14 + Math.random() * 22 + "px";
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 1000);
+    }
+  }
 
+  // Dramatic sound using Web Audio
+  function playDramaticSound() {
+    const ctx = new (window.AudioContext || window.webkitAudioContext)();
+    const osc1 = ctx.createOscillator();
+    const osc2 = ctx.createOscillator();
+    const gain = ctx.createGain();
+
+    osc1.type = "sine";
+    osc2.type = "triangle";
+    osc1.frequency.value = 440;
+    osc2.frequency.value = 660;
+
+    gain.gain.setValueAtTime(0.0001, ctx.currentTime);
+    gain.gain.exponentialRampToValueAtTime(0.4, ctx.currentTime + 0.15);
+    gain.gain.exponentialRampToValueAtTime(0.0001, ctx.currentTime + 1.2);
+
+    osc1.connect(gain);
+    osc2.connect(gain);
+    gain.connect(ctx.destination);
+
+    osc1.start();
+    osc2.start();
+    osc1.stop(ctx.currentTime + 1.2);
+    osc2.stop(ctx.currentTime + 1.2);
+  }
+
+  // Typewriter effect
+  function typeWriter(text, element, speed = 40) {
+    let i = 0;
+    element.textContent = "";
+    element.style.display = "block";
+
+    const interval = setInterval(() => {
+      element.textContent += text.charAt(i);
+      i++;
+      if (i >= text.length) clearInterval(interval);
+    }, speed);
+  }
+
+  yesBtn.addEventListener("click", () => {
+    heartBurst();
+    playDramaticSound();
+
+    catImage.style.opacity = 0;
     setTimeout(() => {
       catImage.src = "cat-after.jpg";
       catImage.style.opacity = 1;
     }, 300);
 
     buttons.style.display = "none";
-    message.style.display = "block";
+
+    const messageText =
+Oh how you wish you could press no 😔, should have known its not that easy with me 😉. i love you laods mezaab i cannot wait for this special day. and between me and you, i know you pressed that yes instantly 😜. 
+
+    typeWriter(messageText, messageEl);
   });
-
-  // Floating hearts
-  setInterval(() => {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.innerHTML = "❤";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.fontSize = Math.random() * 18 + 12 + "px";
-    document.body.appendChild(heart);
-
-    setTimeout(() => heart.remove(), 8000);
-  }, 450);
 </script>
 
 </body>
